Updated valid position logic when placing ships

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,12 @@
         <p>Player 2</p>
         <div class="player2-board"></div>
         <div class="shipyard">
-          <div id="0" draggable="true" class="draggable ship carrier"></div>
+          <div
+            data-ship-type="carrier"
+            id="0"
+            draggable="true"
+            class="draggable ship carrier"
+          ></div>
           <div id="1" draggable="true" class="draggable ship battleship"></div>
           <div id="2" draggable="true" class="draggable ship destroyer"></div>
           <div id="3" draggable="true" class="draggable ship submarine"></div>
