--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,12 @@
             draggable="true"
             class="draggable ship carrier"
           ></div>
-          <div id="1" draggable="true" class="draggable ship battleship"></div>
+          <div
+            data-ship-type="destroyer"
+            id="1"
+            draggable="true"
+            class="draggable ship battleship"
+          ></div>
           <div id="2" draggable="true" class="draggable ship destroyer"></div>
           <div id="3" draggable="true" class="draggable ship submarine"></div>
           <div id="4" draggable="true" class="draggable ship patrolBoat"></div>
