--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
     <title>Battleships</title>
   </head>
   <body>
-    <nav>
-      <div class="navbar"></div>
-    </nav>
+    <img src="./images/wallpaper.jpg"class="background-img"></img>
+    
     <main class="main">
       <!-- ships go here -->
     </main>
