--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Battleships</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@100;200;300;400;500;600;700;800&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Notable&family=Ysabeau+SC:wght@100;200;300;400;500;600;700;800&display=swap');
     </style>
   </head>
   <body>
